--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/node-forge": "^1.3.13",
     "wrangler": "^4.27.0"
   },
   "peerDependencies": {
@@ -19,7 +20,6 @@
   "dependencies": {
     "asn1js": "^3.0.6",
     "hono": "^4.8.10",
-    "node-forge": "^1.3.1",
-    "pkijs": "^3.2.5"
+    "node-forge": "^1.3.1"
   }
 }
