--- a/api/wrangler.jsonc
+++ b/api/wrangler.jsonc
@@ -2,6 +2,9 @@
   "name": "passbuilder",
   "main": "src/index.tsx",
   "compatibility_date": "2025-07-12",
+  "observability": {
+    "enabled": true
+  },
   "compatibility_flags": [
     "nodejs_compat"
   ],
